<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AppOpsPlayground</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_detail">DetailActivity</string>

    <string name="detail_loc_allow">Allow Location Operations</string>
    <string name="detail_loc_block">Block Location Operations</string>
    <string name="detail_note_allow">Allow Notification Operations</string>
    <string name="detail_note_block">Block Notification Operations</string>
    <string name="detail_monitoring">Add Package Monitoring</string>

    <string name="app_ops_settings">App ops</string>
    <string name="app_ops_running">Running</string>
    <string name="app_ops_never_used">(Never used)</string>
    <string name="version_text">version %1$s</string>
</resources>
