<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="com.athoc.panic.appopsplayground.app.DetailActivity">

    <TextView
        android:id="@+id/text_package"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_monitoring"
        android:onClick="onMonitorClick" />

    <TextView
        android:id="@+id/text_loc_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <Button
        android:id="@+id/btn_loc_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/detail_loc_block"
        android:onClick="onBlockClick" />
    <Button
        android:id="@+id/btn_loc_allow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_loc_allow"
        android:onClick="onAllowClick" />

    <TextView
        android:id="@+id/text_note_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"/>
    <Button
        android:id="@+id/btn_note_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:text="@string/detail_note_block"
        android:onClick="onBlockClick" />
    <Button
        android:id="@+id/btn_note_allow"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/detail_note_allow"
        android:onClick="onAllowClick" />
</LinearLayout>
